tests/SyntaxError/Test9/test8.c
int main(){

funct(1,1);

}

int funct (int a, b){
return a+b ;
}
